<resources>
    <string name="app_name">OOM</string>

    <string name="service0">Google Hangouts</string>
    <string name="service1">IRC</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
    <string name="action_person">Configure person</string>


    <string name="landing_button1">New person</string>
    <string name="landing_button2">Debug</string>

    <string name="edit_account_text">Accounts</string>
    <string name="edit_name">Name</string>
    <string name="edit_add">Add account</string>
</resources>
